tests/NormalTests/paczka1/small_fuzzy/16732903.err
Error in line 5: 0eOd7xeinR S102 92,9
Error in line 9: gN73Fc S884 56,6
